--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,15 @@
+@article{Arulandhu_2017,
+	doi = {10.1093/gigascience/gix080},
+	url = {https://doi.org/10.1093%2Fgigascience%2Fgix080},
+	year = 2017,
+	month = {aug},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {6},
+	number = {10},
+	author = {Alfred J. Arulandhu and Martijn Staats and Rico Hagelaar and Marleen M. Voorhuijzen and Theo W. Prins and Ingrid Scholtens and Adalberto Costessi and Danny Duijsings and Fran{\c{c}}ois Rechenmann and Fr{\'{e}}d{\'{e}}ric B. Gaspar and Maria Teresa Barreto Crespo and Arne Holst-Jensen and Matthew Birck and Malcolm Burns and Edward Haynes and Rupert Hochegger and Alexander Klingl and Lisa Lundberg and Chiara Natale and Hauke Niekamp and Elena Perri and Alessandra Barbante and Jean-Philippe Rosec and Ralf Seyfarth and Tereza Sovov{\'{a}} and Christoff Van Moorleghem and Saskia van Ruth and Tamara Peelen and Esther Kok},
+	title = {Development and validation of a multi-locus {DNA} metabarcoding method to identify endangered species in complex samples},
+	journal = {{GigaScience}}
+}
 @article{Balasingham_2017,
 	doi = {10.1111/mec.14395},
 	url = {https://doi.org/10.1111%2Fmec.14395},
@@ -54,7 +66,6 @@
 	number = {1},
 	pages = {e1005871},
 	author = {Maureen A. Carey and Jason A. Papin},
-	editor = {Scott Markel},
 	title = {Ten simple rules for biologists learning to program},
 	journal = {{PLOS} Computational Biology}
 }
@@ -88,6 +99,19 @@
 	author = {Kristy Deiner and Holly M. Bik and Elvira Mächler and Mathew Seymour and Anaïs Lacoursi{\`{e}}re-Roussel and Florian Altermatt and Simon Creer and Iliana Bista and David M. Lodge and Natasha de Vere and Michael E. Pfrender and Louis Bernatchez},
 	title = {Environmental {DNA} metabarcoding: Transforming how we survey animal and plant communities},
 	journal = {Molecular Ecology}
+}
+@article{Galili_2017,
+	doi = {10.1093/bioinformatics/btx657},
+	url = {https://doi.org/10.1093%2Fbioinformatics%2Fbtx657},
+	year = 2017,
+	month = {oct},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {34},
+	number = {9},
+	pages = {1600--1602},
+	author = {Tal Galili and Alan O'Callaghan and Jonathan Sidi and Carson Sievert},
+	title = {heatmaply: an R package for creating interactive cluster heatmaps for online publishing},
+	journal = {Bioinformatics}
 }
 @article{Gu_2013,
 	doi = {10.1371/journal.pone.0067818},
@@ -123,7 +147,26 @@
   year        = {2007},
   pages       = {534--565},
 }
-
+@article{Kandlikar_2018a,
+  author = {Gaurav S. Kandlikar and Zachary J. Gold and Madeline C. Cowen and Rachel S. Meyer and Amanda C. Freise and Nathan J.B. Kraft and Jordan Moberg-Parker and Joshua Sprague and David Kushner and and Emily E. Curd},
+  title = "{Taxon table and metadata file for Santa Monica Mountains eDNA samples (16S and plant-ITS metabarcodes sequenced)}",
+  year = "2018",  
+  month = "10",
+  url = "https://figshare.com/articles/Taxon_table_and_metadata_file_for_Santa_Monica_Mountains_eDNA_samples_16S_and_plant-ITS_metabarcodes_sequenced_/7199510",
+  doi = "10.6084/m9.figshare.7199510.v1",
+  journal   = {Figshare},
+  volume = {10.6084/m9.figshare.7199510.v1}
+}
+@article{Kandlikar_2018b,
+  author = {Gaurav S. Kandlikar and Zachary J. Gold and Madeline C. Cowen and Rachel S. Meyer and Amanda C. Freise and Nathan J.B. Kraft and Jordan Moberg-Parker and Joshua Sprague and David Kushner and and Emily E. Curd},
+  title = "{Taxon table and metadata file for Santa Monica Mountains eDNA samples (16S and plant-ITS metabarcodes sequenced)}",
+  year = "2018",
+  month = "10",
+  url = "https://figshare.com/articles/Taxon_table_and_metadata_file_for_Santa_Monica_Mountains_eDNA_samples_16S_and_plant-ITS_metabarcodes_sequenced_/7199510",
+  doi = "10.6084/m9.figshare.7199510.v1",
+  journal   = {Figshare},
+  volume = {10.6084/m9.figshare.7199510.v1}
+}
 @article{Langille_2013,
 	doi = {10.1038/nbt.2676},
 	url = {https://doi.org/10.1038%2Fnbt.2676},
@@ -136,6 +179,18 @@
 	author = {Morgan G I Langille and Jesse Zaneveld and J Gregory Caporaso and Daniel McDonald and Dan Knights and Joshua A Reyes and Jose C Clemente and Deron E Burkepile and Rebecca L Vega Thurber and Rob Knight and Robert G Beiko and Curtis Huttenhower},
 	title = {Predictive functional profiling of microbial communities using 16S {rRNA} marker gene sequences},
 	journal = {Nature Biotechnology}
+}
+@article{Leray_2013,
+	doi = {10.1186/1742-9994-10-34},
+	url = {https://doi.org/10.1186%2F1742-9994-10-34},
+	year = 2013,
+	publisher = {Springer Nature},
+	volume = {10},
+	number = {1},
+	pages = {34},
+	author = {Matthieu Leray and Joy Y Yang and Christopher P Meyer and Suzanne C Mills and Natalia Agudelo and Vincent Ranwez and Joel T Boehm and Ryuji J Machida},
+	title = {A new versatile primer set targeting a short fragment of the mitochondrial {COI} region for metabarcoding metazoan diversity: application for characterizing coral reef fish gut contents},
+	journal = {Frontiers in Zoology}
 }
 @article{McMurdie_2013,
   author = {Paul J. McMurdie and Susan Holmes},
@@ -260,6 +315,13 @@
 	title = {Comparing the Impact of Course-Based and Apprentice-Based Research Experiences in a Life Science Laboratory Curriculum {\textdagger}},
 	journal = {Journal of Microbiology {\&} Biology Education}
 }
+@Manual{Sievert_2018,
+  title = {plotly for R},
+  author = {Carson Sievert},
+  year = {2018},
+  url = {https://plotly-book.cpsievert.me},
+}
+
 @article{Taberlet_2012,
 	doi = {10.1111/j.1365-294x.2012.05542.x},
 	url = {https://doi.org/10.1111%2Fj.1365-294x.2012.05542.x},
@@ -283,7 +345,6 @@
 	number = {6},
 	pages = {1379--1385},
 	author = {Austen C. Thomas and Jesse Howard and Phong L. Nguyen and Tracie A. Seimon and Caren S. Goldberg},
-	editor = {Nick Golding},
 	title = {{ANDe}{\texttrademark}
 		: A fully integrated environmental {DNA} sampling system},
 	journal = {Methods in Ecology and Evolution}
