--- a/bibliography.bib
+++ b/bibliography.bib
@@ -149,13 +149,13 @@
 }
 @article{Kandlikar_2018a,
   author = {Gaurav S. Kandlikar and Zachary J. Gold and Madeline C. Cowen and Rachel S. Meyer and Amanda C. Freise and Nathan J.B. Kraft and Jordan Moberg-Parker and Joshua Sprague and David Kushner and and Emily E. Curd},
-  title = "{Taxon table and metadata file for Santa Monica Mountains eDNA samples (16S and plant-ITS metabarcodes sequenced)}",
-  year = "2018",  
+  title = "{Taxon table and metadata file for Channel Islands eDNA samples (mitochondrial 12S and CO1 metabarcodes sequenced)}",
+  year = "2018",
   month = "10",
-  url = "https://figshare.com/articles/Taxon_table_and_metadata_file_for_Santa_Monica_Mountains_eDNA_samples_16S_and_plant-ITS_metabarcodes_sequenced_/7199510",
-  doi = "10.6084/m9.figshare.7199510.v1",
-  journal   = {Figshare},
-  volume = {10.6084/m9.figshare.7199510.v1}
+  url = "https://figshare.com/articles/Taxon_table_and_metadata_file_for_Channel_Islands_eDNA_samples_mitochondrial_12S_and_CO1_metabarcodes_sequenced_/7199477",
+  doi = "10.6084/m9.figshare.7199477.v1",
+  journal = {Figshare},
+  volume = {10.6084/m9.figshare.7199477.v1}
 }
 @article{Kandlikar_2018b,
   author = {Gaurav S. Kandlikar and Zachary J. Gold and Madeline C. Cowen and Rachel S. Meyer and Amanda C. Freise and Nathan J.B. Kraft and Jordan Moberg-Parker and Joshua Sprague and David Kushner and and Emily E. Curd},
